--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ header{
     position: absolute;
     background-color: #fff;
     border-radius: 10px;
-    padding: 15px; /* Increased padding */
-    width: 400px; /* Increased width */
+    padding: 15px; 
+    width: 400px; 
     z-index: 100;
     box-shadow: 0px 3px 10px 3px #d43333;
 }
